--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.1.7",
     "morgan": "~1.9.0",
     "pug": "2.0.0-beta11",
-    "session": "^0.1.0"
+    "session": "^0.1.0",
+    "urlencoded-parser": "^1.0.0"
   }
 }
